syntax = "proto3";

option go_package = ".;pb";
package pb;

service GRPCStoreService {
  rpc Get(GetRequest) returns (GetResult) {}
  rpc Set(SetRequest) returns (SetResult) {}
  rpc Delete(DeleteRequest) returns (DeleteResult) {}
}

message GetRequest { string key = 1; }
message GetResult { bytes value = 1; }

message SetRequest {
  string key = 1;
  bytes value = 2;
}
message SetResult {}

message DeleteRequest { string key = 1; }
message DeleteResult {}
